--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="index.css">
         <title>What_A_Website</title>
+        <a href="old-quotes.html">Click here for quotes.</a>
+        <p><i>Don't worry, this will be formatted better in the future.</i></p>
     </head>
     <body>
         <main>
