--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="index.css">
         <title>What_A_Website</title>
-        <a href="old-quotes/old-quotes.html">Click here for quotes.</a>
+        <a href="old-quotes/old-quotes-protected.html">Click here for quotes.</a>
     </head>
     <body>
         <main>
